09_deployments/canary/01-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v2
  namespace: rolling-updates
spec:
  replicas: 5 # Default 1 (Best Practice: Dont set in YAML to scale independently from CI/CD and/or horizontal autoscaling)
  selector:
    matchLabels:
      app: demo-app-v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: demo-app-v2
    spec:
      containers:
      - image: harbor.cloudpirates.io/training/rollouts-demo:purple
        name: demo-app-v2
        resources:
          limits: {}
        ports:
        - containerPort: 3000
          name: web
        readinessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            port: 3000
            path: /readyz
        livenessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          httpGet:
            port: 3000
            path: /livez
