09_deployments/canary/02-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: demo-app-v2
  name: demo-app-v2
  namespace: example
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: web
  selector:
    run: demo-app-v2
  sessionAffinity: None
  type: ClusterIP
